SERVER-85452: Retry updating config.shards if sharding is not ready (#18302)

GitOrigin-RevId: b3b9914676d902785476266c3b7d6b618d853df2