src/mongo/db/s/sharding_initialization_mongod.cpp
@@ -81,6 +81,7 @@
 #include "mongo/db/s/shard_local.h"
 #include "mongo/db/s/shard_server_catalog_cache_loader.h"
 #include "mongo/db/s/sharding_initialization_mongod.h"
+#include "mongo/db/s/sharding_ready.h"
 #include "mongo/db/s/transaction_coordinator_service.h"
 #include "mongo/db/server_options.h"
 #include "mongo/db/shard_id.h"
@@ -565,8 +566,13 @@ void ShardingInitializationMongoD::updateShardIdentityConfigString(
 void ShardingInitializationMongoD::onStepUpBegin(OperationContext* opCtx, long long term) {
     _isPrimary.store(true);
     if (Grid::get(opCtx)->isInitialized()) {
-        ShardRegistry::scheduleReplicaSetUpdateOnConfigServerIfNeeded(
-            opCtx, [&]() -> bool { return _isPrimary.load(); });
+        auto executor = Grid::get(opCtx)->getExecutorPool()->getFixedExecutor();
+        // Update the replica set on the config server after sharding is ready to fix a race where a
+        // new node finishes auto-bootstrapping after the update finishes (resulting in no updates).
+        (void)ShardingReady::get(opCtx)->isReadyFuture().thenRunOn(executor).then([&]() {
+            ShardRegistry::scheduleReplicaSetUpdateOnConfigServerIfNeeded(
+                opCtx, [&]() -> bool { return _isPrimary.load(); });
+        });
     }
 }
 
