src/mongo/db/s/sharding_ready.h
@@ -62,6 +62,7 @@ public:
     void scheduleTransitionToConfigShard(OperationContext* opCtx);
     void waitUntilReady(OperationContext* opCtx);
     bool isReady();
+    SharedSemiFuture<void> isReadyFuture() const;
 
     /**
      * Sets a value for the _isReady promise indicating that the sharding system is ready to start
